Fix jumper logic on culture, pad top so leading arrow isn't show

--- a/_assets/src/less/powershop.base.less
+++ b/_assets/src/less/powershop.base.less
@@ -2193,9 +2193,15 @@ a {
 	height: 745px;
 }
 
+.current_roles_spacer {
+	height: 50px;
+	width: 100%;
+	background: @purplePink url(/_assets/img/textures/pink.png) 0 0;
+}
+
 #current_roles {
-	background: @purplePink url(/_assets/img/textures/pink.png);
-	padding: 120px 0 200px;
+	background: @purplePink url(/_assets/img/textures/pink.png) 0 -50px;
+	padding: 70px 0 200px;
 
 	.apply {
 		display: block;
